# unit-validator

./: .gitignore  Makefile  README.md  UnitLang.g4  hatch.toml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tox.ci.ini  tox.ini  unit-standardizer.yaml  units.output.tsv  units.tsv
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: mypy.yml  ruff.yml  test.yml
dev-scripts/: build.sh  compile-antlr4.sh  init-repo.sh  install-certs.sh  lint.sh  test.sh
dev-scripts/helper/: formatting.sh
unit_lang/: UnitLang.interp  UnitLang.tokens  UnitLangLexer.interp  UnitLangLexer.py  UnitLangLexer.tokens  UnitLangListener.py  UnitLangParser.py  UnitLangVisitor.py
unit_standardizer/: run.py  test_unit_lang.py  test_unit_standardizer.py  unit_standardizer.py
